[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Analysis tools for the Matrix"
authors = ["Marco <marco@student.42lyon.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10" 
pandas = "2.1.0"
numpy = "1.24.3"
matplotlib = "3.7.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"