[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Analysis tools for the Matrix"
authors = ["Marco <marco@student.42lyon.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10" 
pandas = "2.3.3"
numpy = "2.2.6"
matplotlib = "3.10.0"
requests = "2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"